testsuite/tests/rep-poly/T20423.stderr

T20423.hs:11:1: error:
    The pattern synonym scrutinee does not have a fixed runtime representation:
    • LPInt lev :: TYPE ('BoxedRep lev)
